Fixed Note cards alignment problem on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
   min-width: 100vw;
   display: flex;
   flex-direction: column-reverse;
-  justify-content: start;
+  justify-content: end;
   overflow-y: hidden;
 }
 .blurred {
